--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -13,8 +13,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         {{ rubrique.name }}<br>
-                        {% for post in rubrique %}
-                           {{ post.title }}
+                        {% for post in rubrique.posts %}
+                           {{ post.titre }}
                         {% endfor %}
                     </div>
                     <div class="col-md-4">
