--- a/src/MH/NewsletterBundle/Resources/views/Post/add.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/add.html.twig
@@ -1,17 +1,18 @@
 {% extends "MHNewsletterBundle::layout.html.twig" %}
 
 {% block title %}
-    Edition - {{ parent() }}
+    Ajout - {{ parent() }}
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Edition du Post</h2>
+    <h2>Ajout Post</h2>
 
     <div id="contain" >
         <div class="well">
             {{ form(form) }}
         </div>
     </div>
+
 
 {% endblock %}
 
