--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/add.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/add.html.twig
@@ -5,13 +5,14 @@
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Edition du Post</h2>
+    <h2>Ajout Rubrique</h2>
 
     <div id="contain" >
         <div class="well">
             {{ form(form) }}
         </div>
     </div>
+
 
 {% endblock %}
 
