edit working for rubrique post and newsletter

--- a/src/MH/NewsletterBundle/Resources/views/Post/add.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/add.html.twig
@@ -12,7 +12,8 @@
             {{ form(form) }}
         </div>
     </div>
-
+    <br>
+    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': id}) }}">Retour</a>
 
 {% endblock %}
 
