--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -20,17 +20,34 @@
                     <div id="{{ rubrique.id }}" class="panel-collapse collapse in">
                         <div class="panel-body">
                             {% for post in rubrique.posts %}
-                                <div class="well well-sm">
-                                    {{ post.titre }}<br>
+                                <div class="row">
+                                    <div class="col-md-9">
+                                        <div class="well well-sm">
+                                        {{ post.titre }}
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <a class="btn btn-warning" href="{{ path('mh_newsletter_post_edit',  {'id': post.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
+                                        <a class="btn btn-danger" href="{{ path('mh_newsletter_post_delete', {'id': post.id, 'newsletter_id': newsletter.id, 'rubrique_id': rubrique.id}    ) }}">Supprimer</a>
+                                    </div>
+                                    <br>
                                 </div>
                             {% endfor %}
-                            <a class="btn btn-primary" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id}    ) }}">new Post</a>
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <a class="btn btn-primary" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">new Post</a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a class="btn btn-warning" href="{{ path('mh_newsletter_rubrique_edit',  {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
+                                    <a class="btn btn-danger" href="{{ path('mh_newsletter_rubrique_delete', {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">Supprimer</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             {% endfor %}
             <br>
-            <a class="btn btn-primary" href="{{ path('mh_newsletter_rubrique_add', {'id': newsletter.id}    ) }}" target="_blank">Ajouter une rubrique</a>
+            <a class="btn btn-primary" href="{{ path('mh_newsletter_rubrique_add', {'id': newsletter.id}    ) }}" >Ajouter une rubrique</a>
         </div>
     </div>
 
