--- a/src/MH/NewsletterBundle/Resources/views/Post/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Post/edit.html.twig
@@ -11,6 +11,7 @@
         <div class="well">
             {{ form(form) }}
         </div>
+        <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': post.id, 'newsletter_id':newsletter_id} ) }}">Retour</a>
     </div>
 
 {% endblock %}
