--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
@@ -16,5 +16,7 @@
             {{ form_rest(form) }}
         </form>
     </div>
+    <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': rubrique.id, 'newsletter_id':newsletter_id} ) }}">Retour</a>
+
     <hr>
 {% endblock %}
