--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -17,7 +17,7 @@
                                 {{ rubrique.name }}</a>
                         </h4>
                     </div>
-                    <div id="{{ rubrique.id }}" class="panel-collapse collapse in">
+                    <div id="{{ rubrique.id }}" class="panel-collapse collapse">
                         <div class="panel-body">
                             {% for post in rubrique.posts %}
                                 <div class="row">
