--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -6,7 +6,7 @@
 
 {% block bundle_body %}
     <h2>Edition Newsletter</h2>
-
+    <hr>
     <div id="contain" >
         <div class="panel-group" id="accordion">
             {% for rubrique in newsletter.rubriques %}
@@ -19,20 +19,24 @@
                     </div>
                     <div id="{{ rubrique.id }}" class="panel-collapse collapse">
                         <div class="panel-body">
-                            {% for post in rubrique.posts %}
-                                <div class="row">
-                                    <div class="col-md-9">
-                                        <div class="well well-sm">
-                                        {{ post.titre }}
+                            <ul class="list-unstyled post-sortable">
+                                {% for post in rubrique.posts | sortbyfield('position') %}
+                                    <li  id="post_{{ post.id }}">
+                                    <div class="row">
+                                        <div class="col-md-9">
+                                            <div class="well well-sm">
+                                            {{ post.titre }}
+                                            </div>
                                         </div>
+                                        <div class="col-md-3">
+                                            <a class="btn btn-warning" href="{{ path('mh_newsletter_post_edit',  {'id': post.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
+                                            <a class="btn btn-danger" href="{{ path('mh_newsletter_post_delete', {'id': post.id, 'newsletter_id': newsletter.id, 'rubrique_id': rubrique.id}    ) }}">Supprimer</a>
+                                        </div>
+                                        <br>
                                     </div>
-                                    <div class="col-md-3">
-                                        <a class="btn btn-warning" href="{{ path('mh_newsletter_post_edit',  {'id': post.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
-                                        <a class="btn btn-danger" href="{{ path('mh_newsletter_post_delete', {'id': post.id, 'newsletter_id': newsletter.id, 'rubrique_id': rubrique.id}    ) }}">Supprimer</a>
-                                    </div>
-                                    <br>
-                                </div>
-                            {% endfor %}
+                                    </li>
+                                {% endfor %}
+                            </ul>
                             <div class="row">
                                 <div class="col-md-9">
                                     <a class="btn btn-primary" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">new Post</a>
@@ -55,6 +59,24 @@
 {% endblock %}
 
 {% block bundle_javascript %}
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".post-sortable").sortable({
+            cursor: "move",
+            update: function () {
+                var order_serialize = $(this).sortable("serialize", {key: "posts[]"});
 
+                $.ajax({
+                    type: "POST",
+                    url: "{{ path('mh_newsletter_post_order') }}",
+                    data: order_serialize,
+                    error: function () {
+                        console.log('error');
+                    }
+                });
+            }
+        });
+    });
+</script>
 {% endblock %}
 
