--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -7,41 +7,57 @@
 {% block bundle_body %}
     <h2>Edition Newsletter</h2>
     <hr>
-    <div id="contain" >
         <div class="panel-group" id="accordion">
-            {% for rubrique in newsletter.rubriques %}
+            <ul class="list-unstyled rubrique-sortable">
+            {% for rubrique in newsletter.rubriques | sortbyfield('position') %}
+            <li  id="rubrique_{{ rubrique.id }}">
                 <div class="panel panel-success">
+
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#{{ rubrique.id }}">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#rubrique{{ rubrique.id }}">
                                 {{ rubrique.name }}</a>
                         </h4>
                     </div>
-                    <div id="{{ rubrique.id }}" class="panel-collapse collapse">
+                    <div id="rubrique{{ rubrique.id }}" class="panel-collapse collapse">
                         <div class="panel-body">
+                            <div class="panel-group" id="accordion{{ rubrique.id }}">
                             <ul class="list-unstyled post-sortable">
+
                                 {% for post in rubrique.posts | sortbyfield('position') %}
                                     <li  id="post_{{ post.id }}">
-                                    <div class="row">
-                                        <div class="col-md-9">
-                                            <div class="well well-sm">
-                                            {{ post.titre }}
+                                        <div class="panel panel-info">
+                                            <div class="panel-heading">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#accordion{{ rubrique.id }}" href="#post{{ post.id }}rubrique{{ rubrique.id }}">
+                                                        {{ post.titre }}</a>
+                                                </h4>
+                                            </div>
+                                            <div id="post{{ post.id }}rubrique{{ rubrique.id }}" class="panel-collapse collapse">
+                                                <div class="panel-body">
+                                                    <div class="col-md-10 col-xs-9">
+                                                        {{ post.content }}
+                                                    </div>
+                                                    <div class="col-md-2 col-xs-3">
+                                                        <a class="btn btn-warning" href="{{ path('mh_newsletter_post_edit',  {'id': post.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
+                                                        <br>
+                                                        <br>
+                                                        <a class="btn btn-danger" href="{{ path('mh_newsletter_post_delete', {'id': post.id, 'newsletter_id': newsletter.id, 'rubrique_id': rubrique.id}    ) }}">Supprimer</a>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="col-md-3">
-                                            <a class="btn btn-warning" href="{{ path('mh_newsletter_post_edit',  {'id': post.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
-                                            <a class="btn btn-danger" href="{{ path('mh_newsletter_post_delete', {'id': post.id, 'newsletter_id': newsletter.id, 'rubrique_id': rubrique.id}    ) }}">Supprimer</a>
-                                        </div>
                                         <br>
-                                    </div>
                                     </li>
                                 {% endfor %}
                             </ul>
+                            </div>
+
                             <div class="row">
-                                <div class="col-md-9">
+                                <div class="col-lg-9 col-md-6 col-xs-6">
                                     <a class="btn btn-primary" href="{{ path('mh_newsletter_post_add', {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">new Post</a>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-lg-3 col-md-6 col-xs-6">
                                     <a class="btn btn-warning" href="{{ path('mh_newsletter_rubrique_edit',  {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
                                     <a class="btn btn-danger" href="{{ path('mh_newsletter_rubrique_delete', {'id': rubrique.id, 'newsletter_id': newsletter.id}    ) }}">Supprimer</a>
                                 </div>
@@ -49,11 +65,14 @@
                         </div>
                     </div>
                 </div>
+                <br>
+            </li>
+
             {% endfor %}
+            </ul>
             <br>
             <a class="btn btn-primary" href="{{ path('mh_newsletter_rubrique_add', {'id': newsletter.id}    ) }}" >Ajouter une rubrique</a>
         </div>
-    </div>
 
 
 {% endblock %}
@@ -69,6 +88,21 @@
                 $.ajax({
                     type: "POST",
                     url: "{{ path('mh_newsletter_post_order') }}",
+                    data: order_serialize,
+                    error: function () {
+                        console.log('error');
+                    }
+                });
+            }
+        });
+        $(".rubrique-sortable").sortable({
+            cursor: "move",
+            update: function () {
+                var order_serialize = $(this).sortable("serialize", {key: "rubriques[]"});
+
+                $.ajax({
+                    type: "POST",
+                    url: "{{ path('mh_newsletter_rubrique_order') }}",
                     data: order_serialize,
                     error: function () {
                         console.log('error');
