add copy feature for newsletter add link option post add agenda type for post

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -18,6 +18,11 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
                 crossorigin="anonymous"></script>
+        <style>
+            body {
+                overflow-y: scroll;
+            }
+        </style>
     {% endblock %}
 </head>
 
@@ -47,7 +52,7 @@
         <hr>
 
         <footer>
-            <p>footer le  {{ 'now'|date('d M Y') }}</p>
+            <p>Hanotaux Mathieu - Webmaster du Groupe ESIEA 2017- <a href="mailto:hanotaux@et.esiea.fr">hanotaux@et.esiea.fr</a></p>
         </footer>
     </div>
 
