--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/edit.html.twig
@@ -11,7 +11,7 @@
         <div class="well">
             {{ form(form) }}
         </div>
-        <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id': rubrique.id, 'newsletter_id':newsletter_id} ) }}">Retour</a>
+        <a class="btn btn-default" href="{{ path('mh_newsletter_edit', {'id':newsletter_id} ) }}">Retour</a>
     </div>
 
 
