--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/edit.html.twig
@@ -1,5 +1,9 @@
 {% extends "MHNewsletterBundle::layout.html.twig" %}
 
+{% block bundle_css %}
+
+{% endblock %}
+
 {% block title %}
     Edition - {{ parent() }}
 {% endblock %}
@@ -36,7 +40,14 @@
                                             <div id="post{{ post.id }}rubrique{{ rubrique.id }}" class="panel-collapse collapse">
                                                 <div class="panel-body">
                                                     <div class="col-md-10 col-xs-9">
-                                                        {{ post.content }}
+                                                        {{ post.content }}<br>
+                                                        {% if post.lien is not empty %}
+                                                            <a
+                                                                    href="{{ post.lien }}"
+                                                                    target="_blank"
+                                                                    style="display: inline-block;text-decoration: none;font-family: Helvetica, Arial, sans-serif;color: #2c87c3;"><span
+                                                                        style="color: #2c87c3;text-decoration: none;">> {{ post.textelien }}</span></a>
+                                                        {% endif %}
                                                     </div>
                                                     <div class="col-md-2 col-xs-3">
                                                         <a class="btn btn-warning" href="{{ path('mh_newsletter_post_edit',  {'id': post.id, 'newsletter_id': newsletter.id}    ) }}">Modifier</a>
@@ -71,7 +82,21 @@
             {% endfor %}
             </ul>
             <br>
-            <a class="btn btn-primary" href="{{ path('mh_newsletter_rubrique_add', {'id': newsletter.id}    ) }}" >Ajouter une rubrique</a>
+            <div class="row">
+                <div class="col-md-3 col-sm-4 col-xs-12">
+                    <a class="btn btn-primary" href="{{ path('mh_newsletter_rubrique_add', {'id': newsletter.id}    ) }}" >Ajouter une rubrique</a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-12">
+                    <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-info" target="_blank">
+                        <span class="glyphicon glyphicon-expand"></span>
+                        Afficher
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-12">
+                    <a class="btn btn-warning" href="{{ path('mh_newsletter_edit_header',  {'id': newsletter.id}    ) }}">Modifier L'entête</a>
+                </div>
+            </div>
+
         </div>
 
 
