--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
@@ -15,27 +15,51 @@
             <div class="panel-body" data-toggle="collapse" data-target="#info{{ newsletter.id }}">
                 <h3>{{ newsletter.name }} {{ newsletter.week }}</h3>
                 <i>   crée le {{ newsletter.date|date("m/d/Y à H:i:s", "Europe/Paris")|raw }} par {{ newsletter.auteur }}</i>
+                <br><br>
 
                 <div id="info{{ newsletter.id }}" class="collapse">
-                    <a href="{{ path('mh_newsletter_edit',{'id':newsletter.id}) }}" class="btn btn-default">
-                        <i class="glyphicon glyphicon-edit"></i>
-                        Modifier la Newsletter
-                    </a>
-                    <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-info" target="_blank">
-                        <i class="glyphicon glyphicon-expand"></i>
-                        Afficher la Newsletter
-                    </a>
-                    <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-success">
-                        <i class="glyphicon glyphicon-download"></i>
-                        Telecharger la Newsletter
-                    </a>
-                    <a href="{{ path('mh_newsletter_delete',{'id':newsletter.id}) }}" class="btn btn-danger">
-                        <i class="glyphicon glyphicon-trash"></i>
-                        Supprimer la Newsletter
-                    </a>
-                    <br>
+                    <i>Dernière Modification {{ newsletter.updateat|date("m/d/Y à H:i:s", "Europe/Paris")|raw }}</i>
+                    <div class="row">
+                        <div class="col-md-2 col-sm-6 col-xs-12">
+                            <a href="{{ path('mh_newsletter_edit',{'id':newsletter.id}) }}" class="btn btn-default">
+                                <span class="glyphicon glyphicon-edit"></span>
+                                Modifier
+                            </a>
+                            <br>
+                        </div>
+                        <div class="col-md-2 col-sm-6 col-xs-12">
+                            <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-info" target="_blank">
+                                <span class="glyphicon glyphicon-expand"></span>
+                                Afficher
+                            </a>
+                        </div>
+                        <div class="col-md-2 col-sm-6 col-xs-12">
+                            <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-success">
+                                <span class="glyphicon glyphicon-download"></span>
+                                Telecharger
+                            </a>
+                        </div>
+                        <div class="col-md-2 col-sm-6 col-xs-12">
+                            <a href="{{ path('mh_newsletter_copy',{'id':newsletter.id}) }}" class="btn btn-warning">
+                                <span class="glyphicon glyphicon-copy"></span>
+                                Copier
+                            </a>
+                        </div>
+                        <div class="col-md-2 col-sm-6 col-xs-12">
+                            <a href="{{ path('mh_newsletter_delete',{'id':newsletter.id}) }}" class="btn btn-danger">
+                                <span class="glyphicon glyphicon-trash"></span>
+                                Supprimer
+                            </a>
+                        </div>
 
+
+
+
+
+                        <br>
+                    </div>
                 </div>
+
             </div>
         </div>
 
