--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
@@ -8,61 +8,79 @@
         <a href="{{ path('mh_newsletter_create') }}" class="btn btn-primary">Créer une newsletter</a>
     <h2>Liste des newsletters</h2>
     <hr>
+    <ul class="list-unstyled newsletter-sortable">
+        {% for newsletter in listNewsletter | sortbyfield('position') %}
+            <li  id="newsletter_{{ newsletter.id }}">
+                <div class="panel panel-default">
 
-    {% for newsletter in listNewsletter %}
-        <div class="panel panel-default">
+                    <div class="panel-body" data-toggle="collapse" data-target="#info{{ newsletter.id }}">
+                        <h3>{{ newsletter.name }} {{ newsletter.week }}</h3>
+                        <i>   crée le {{ newsletter.date|date("m/d/Y à H:i:s", "Europe/Paris")|raw }} par {{ newsletter.auteur }}</i>
+                        <br><br>
 
-            <div class="panel-body" data-toggle="collapse" data-target="#info{{ newsletter.id }}">
-                <h3>{{ newsletter.name }} {{ newsletter.week }}</h3>
-                <i>   crée le {{ newsletter.date|date("m/d/Y à H:i:s", "Europe/Paris")|raw }} par {{ newsletter.auteur }}</i>
-                <br><br>
-
-                <div id="info{{ newsletter.id }}" class="collapse">
-                    <i>Dernière Modification {{ newsletter.updateat|date("m/d/Y à H:i:s", "Europe/Paris")|raw }}</i>
-                    <div class="row">
-                        <div class="col-md-2 col-sm-6 col-xs-12">
-                            <a href="{{ path('mh_newsletter_edit',{'id':newsletter.id}) }}" class="btn btn-default">
-                                <span class="glyphicon glyphicon-edit"></span>
-                                Modifier
-                            </a>
-                            <br>
+                        <div id="info{{ newsletter.id }}" class="collapse">
+                            <i>Dernière Modification {{ newsletter.updateat|date("m/d/Y à H:i:s", "Europe/Paris")|raw }}</i>
+                            <div class="row">
+                                <div class="col-md-2 col-sm-6 col-xs-12">
+                                    <a href="{{ path('mh_newsletter_edit',{'id':newsletter.id}) }}" class="btn btn-default">
+                                        <span class="glyphicon glyphicon-edit"></span>
+                                        Modifier
+                                    </a>
+                                    <br>
+                                </div>
+                                <div class="col-md-2 col-sm-6 col-xs-12">
+                                    <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-info" target="_blank">
+                                        <span class="glyphicon glyphicon-expand"></span>
+                                        Afficher
+                                    </a>
+                                </div>
+                                <div class="col-md-2 col-sm-6 col-xs-12">
+                                    <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-success">
+                                        <span class="glyphicon glyphicon-download"></span>
+                                        Telecharger
+                                    </a>
+                                </div>
+                                <div class="col-md-2 col-sm-6 col-xs-12">
+                                    <a href="{{ path('mh_newsletter_copy',{'id':newsletter.id}) }}" class="btn btn-warning">
+                                        <span class="glyphicon glyphicon-copy"></span>
+                                        Copier
+                                    </a>
+                                </div>
+                                <div class="col-md-2 col-sm-6 col-xs-12">
+                                    <a href="{{ path('mh_newsletter_delete',{'id':newsletter.id}) }}" class="btn btn-danger">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                        Supprimer
+                                    </a>
+                                </div>
+                                <br>
+                            </div>
                         </div>
-                        <div class="col-md-2 col-sm-6 col-xs-12">
-                            <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-info" target="_blank">
-                                <span class="glyphicon glyphicon-expand"></span>
-                                Afficher
-                            </a>
-                        </div>
-                        <div class="col-md-2 col-sm-6 col-xs-12">
-                            <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-success">
-                                <span class="glyphicon glyphicon-download"></span>
-                                Telecharger
-                            </a>
-                        </div>
-                        <div class="col-md-2 col-sm-6 col-xs-12">
-                            <a href="{{ path('mh_newsletter_copy',{'id':newsletter.id}) }}" class="btn btn-warning">
-                                <span class="glyphicon glyphicon-copy"></span>
-                                Copier
-                            </a>
-                        </div>
-                        <div class="col-md-2 col-sm-6 col-xs-12">
-                            <a href="{{ path('mh_newsletter_delete',{'id':newsletter.id}) }}" class="btn btn-danger">
-                                <span class="glyphicon glyphicon-trash"></span>
-                                Supprimer
-                            </a>
-                        </div>
-
-
-
-
-
-                        <br>
                     </div>
                 </div>
-
-            </div>
-        </div>
+            </li>
 
         {% endfor %}
+    </ul>
     <hr>
  {% endblock %}
+
+{% block bundle_javascript %}
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(".newsletter-sortable").sortable({
+                cursor: "move",
+                update: function () {
+                    var order_serialize = $(this).sortable("serialize", {key: "newsletters[]"});
+                    $.ajax({
+                        type: "POST",
+                        url: "{{ path('mh_newsletter_order') }}",
+                        data: order_serialize,
+                        error: function () {
+                            console.log('error');
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+{% endblock %}
