--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
@@ -15,11 +15,11 @@
 
                     <div class="panel-body" data-toggle="collapse" data-target="#info{{ newsletter.id }}">
                         <h3>{{ newsletter.name }} {{ newsletter.week }}</h3>
-                        <i>   crée le {{ newsletter.date|date("m/d/Y à H:i:s", "Europe/Paris")|raw }} par {{ newsletter.auteur }}</i>
+                        <i>   crée le {{ newsletter.date|date("d/m/Y à H:i:s", "Europe/Paris")|raw }} par {{ newsletter.auteur }}</i>
                         <br><br>
 
                         <div id="info{{ newsletter.id }}" class="collapse">
-                            <i>Dernière Modification {{ newsletter.updateat|date("m/d/Y à H:i:s", "Europe/Paris")|raw }}</i>
+                            <i>Dernière Modification {{ newsletter.updateat|date("d/m/Y à H:i:s", "Europe/Paris")|raw }}</i>
                             <div class="row">
                                 <div class="col-md-2 col-sm-6 col-xs-12">
                                     <a href="{{ path('mh_newsletter_edit',{'id':newsletter.id}) }}" class="btn btn-default">
@@ -65,6 +65,7 @@
  {% endblock %}
 
 {% block bundle_javascript %}
+
     <script type="text/javascript">
         $(document).ready(function () {
             $(".newsletter-sortable").sortable({
