--- a/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Rubrique/delete.html.twig
@@ -7,7 +7,7 @@
 {% block bundle_body %}
     <h2>Supprimer une Rubrique</h2>
     <hr>
-    <p>La suppresion de la Rubrique est irreversible et entrainera la supprimession de tous les posts associés<br>
+    <p>La suppresion de la Rubrique est irreversible et entrainera la suppression de tous les posts associés<br>
     Souhaitez-vous poursuivre ?</p>
 
     <div class="well">
