4 Bloc Now working : Agenda Texte Separation Header Footer admission
Sorting OK
Delete OK
Change OK

Clone KO
Mail KO

--- a/src/MH/MailBundle/Resources/views/Mail/index.html.twig
+++ b/src/MH/MailBundle/Resources/views/Mail/index.html.twig
@@ -71,7 +71,7 @@
             $(".mail-sortable").sortable({
                 cursor: "move",
                 update: function () {
-                    var order_serialize = $(this).sortable("serialize", {key: "mail[]"});
+                    var order_serialize = $(this).sortable("serialize", {key: "mails[]"});
                     $.ajax({
                         type: "POST",
                         url: "{{ path('mh_mail_order') }}",
