--- a/src/MH/MailBundle/Resources/views/Template/header.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/header.html.twig
@@ -3,9 +3,9 @@
                     <tr>
                         <td align="center" valign="top">
                             <a href="https://www.esiea.fr/ecole-ingenieurs/journees-portes-ouvertes-esiea#1" target="_blank">
-                                <img src="https://www.esiea.fr/wp-content/uploads/2016/11/Header-emailling_02.jpg"
-                                     alt="ESIEA, l'&Eacute;cole d'ing&eacute;nieurs du monde num&eacute;rique" style="overflow: hidden; margin: 0px auto; display: block"
-                                     title="ESIEA, l'&Eacute;cole d'ing&eacute;nieurs du monde num&eacute;rique" height="206" border="0" width="700" />
+                                <img src="{{ post.header.image.src }}"
+                                     alt="{{ post.header.image.alt }}" style="overflow: hidden; margin: 0px auto; display: block"
+                                     title="{{ post.header.image.description }}" height="206" border="0" width="700" />
                             </a>
                         </td>
                     </tr>
