--- a/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
@@ -20,14 +20,14 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#post{{ post.id }}">
-                                {{ post.name }}</a>
+                                {{ post.slug }}</a>
                         </h4>
                     </div>
                     <div id="post{{ post.id }}" class="panel-collapse collapse">
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 col-xs-6">
-                                    <a class="btn btn-warning" href="{{ path('mh_mail_post_edit',  {'id': post.id, 'mail_id': mail.id}    ) }}">Modifier</a>
+                                    <a class="btn btn-warning" href="{{ path('mh_mail_'~ post.slug ~ '_edit',  {'id': post.id, 'mail_id': mail.id}    ) }}">Modifier</a>
                                     <a class="btn btn-danger" href="{{ path('mh_mail_post_delete', {'id': post.id, 'mail_id': mail.id}    ) }}">Supprimer</a>
                                 </div>
                             </div>
@@ -42,7 +42,7 @@
             <br>
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-12">
-                    <a class="btn btn-primary" href="{{ path('mh_mail_post_add', {'id': mail.id}    ) }}" >Ajouter un post</a>
+                    <a class="btn btn-primary" href="{{ path('mh_mail_post_select', {'id': mail.id}  ) }}" >Ajouter un post</a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-xs-12">
                     <a href="{{ path('mh_mail_view',{'id':mail.id}) }}" class="btn btn-info" target="_blank">
@@ -76,7 +76,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "{{ path('mh_newsletter_post_order') }}",
+                    url: "{{ path('mh_mail_post_order') }}",
                     data: order_serialize,
                     error: function () {
                         console.log('error');
@@ -84,21 +84,7 @@
                 });
             }
         });
-        $(".rubrique-sortable").sortable({
-            cursor: "move",
-            update: function () {
-                var order_serialize = $(this).sortable("serialize", {key: "rubriques[]"});
 
-                $.ajax({
-                    type: "POST",
-                    url: "{{ path('mh_newsletter_rubrique_order') }}",
-                    data: order_serialize,
-                    error: function () {
-                        console.log('error');
-                    }
-                });
-            }
-        });
     });
 </script>
 {% endblock %}
